-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 11
-
Component/s: hotspot
-
b20
-
generic
-
generic
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8206805 | 12 | Daniel Daugherty | P3 | Resolved | Fixed | team |
| JDK-8206582 | 11.0.1 | Daniel Daugherty | P3 | Resolved | Fixed | b01 |
Thanks to the eagle eyes of David Holmes for spotting
this bug in a post-push code review!
The fix for 8205195 added a grab of the Threads_lock
in controlled_crash() to make the ErrorHandling tests
more stable. However, this lock grab did not take into
account that controlled_crash() could be called
recursively as part of:
test/hotspot/jtreg/runtime/ErrorHandling/SecondaryErrorTest.java
This results in the test having a secondary crash due to a
recursive Threads_lock grab instead of the intended secondary
failure (a SIGSEGV).
Unfortunately, it is very, very difficult to verify the reason for a
secondary failure so SecondaryErrorTest.java does not fail
with the fix for 8205195 in place in any obvious way.
this bug in a post-push code review!
The fix for 8205195 added a grab of the Threads_lock
in controlled_crash() to make the ErrorHandling tests
more stable. However, this lock grab did not take into
account that controlled_crash() could be called
recursively as part of:
test/hotspot/jtreg/runtime/ErrorHandling/SecondaryErrorTest.java
This results in the test having a secondary crash due to a
recursive Threads_lock grab instead of the intended secondary
failure (a SIGSEGV).
Unfortunately, it is very, very difficult to verify the reason for a
secondary failure so SecondaryErrorTest.java does not fail
with the fix for 8205195 in place in any obvious way.
- backported by
-
JDK-8206582 fix for 8205195 breaks secondary error handling
-
- Resolved
-
-
JDK-8206805 fix for 8205195 breaks secondary error handling
-
- Resolved
-
- relates to
-
JDK-8205195 NestedThreadsListHandleInErrorHandlingTest fails because hs_err doesn't contain _nested_thread_list_max
-
- Resolved
-
-
JDK-8205925 Print correct and more information about secondary errors.
-
- Resolved
-