8205648: fix for 8205195 breaks secondary error handling

Only grab Threads_lock in VMError::controlled_crash() when we don't already own it.

Reviewed-by: sspitsyn, stuefe